Minor fix - change padding on mobile devices.

--- a/css/latest-articles.css
+++ b/css/latest-articles.css
@@ -65,6 +65,9 @@
 
 /* X-Small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
+  .section-latest-articles {
+    padding: 90px 20px;
+  }
   .section-title {
     text-align: center;
     font-size: 31px;
@@ -94,15 +97,12 @@
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
   .section-latest-articles {
-    padding: 30px 100px;
+    padding: 90px 75px;
   }
 }
 
 /* Large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
-  articles-container {
-    justify-content: space-around;
-  }
 }
 
 /* X-Large devices (large desktops, less than 1400px) */
